--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full bg-white">
   <head>
     <meta charset="utf-8" />
     <title>Angular Admin Page</title>
@@ -32,7 +32,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body class="mat-typography">
+  <body class="mat-typography h-full">
     <app-root></app-root>
   </body>
 </html>
